force-app/main/default/objects/Sales_Cycle_Log__c/Sales_Cycle_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks IST person and date/time of Lead Status change</description>
    <label>Sales Cycle Log</label>
    <nameField>
        <displayFormat>SCL-{00000}</displayFormat>
        <label>Sales Cycle Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Cycle Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>