force-app/main/default/objects/Sales_Cycle_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Cycle Logs</relationshipLabel>
    <relationshipName>Sales_Cycle_Log</relationshipName>
    <type>Lookup</type>
</CustomField>