force-app/main/default/objects/Sales_Cycle_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Cycle Log</relationshipLabel>
    <relationshipName>Sales_Cycle_Log</relationshipName>
    <type>Lookup</type>
</CustomField>