force-app/main/default/objects/Sales_Cycle_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sales Cycle Log</relationshipLabel>
    <relationshipName>IST_Lead_Log</relationshipName>
    <type>Lookup</type>
</CustomField>