force-app/main/default/objects/Sales_Cycle_Log__c/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <formula>Lead__r.Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>