force-app/main/default/objects/Sales_Cycle_Log__c/fields/Lead_Estimated_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lead_Estimated_Opportunity_Amount__c</fullName>
    <formula>Lead__r.Estimated_Opportunity_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Estimated Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>