force-app/main/default/objects/Sales_Cycle_Log__c/fields/Lead_Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Is_Converted__c</fullName>
    <formula>Lead__r.IsConverted</formula>
    <label>Lead Is Converted</label>
    <type>Checkbox</type>
</CustomField>