force-app/main/default/objects/Sales_Cycle_Log__c/fields/Lead_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Role__c</fullName>
    <formula>Lead__r.Owner:User.UserRole.Name</formula>
    <label>Lead Owner Role</label>
    <type>Text</type>
</CustomField>