force-app/main/default/objects/Sales_Cycle_Log__c/fields/Lead_Status_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Modified_Date__c</fullName>
    <label>Lead Status Modified Date</label>
    <type>DateTime</type>
</CustomField>