force-app/main/default/objects/Sales_Cycle_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Cycle Logs</relationshipLabel>
    <relationshipName>Sales_Cycle_Log</relationshipName>
    <type>Lookup</type>
</CustomField>