force-app/main/default/objects/Sales_Cycle_Log__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <formula>DATETIMEVALUE(Opportunity__r.CloseDate)</formula>
    <label>Opportunity Close Date</label>
    <type>DateTime</type>
</CustomField>