force-app/main/default/objects/Sales_Cycle_Log__c/fields/Time_Between_Lead_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Time_Between_Lead_Statuses__c</fullName>
    <formula>Lead_Status_Modified_Date__c - CreatedDate</formula>
    <label>Time Between Lead Statuses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>