force-app/main/default/objects/Sales_Cycle_Log__c/fields/Time_to_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Conversion__c</fullName>
    <formula>Lead__r.Lead_Conversion_Date_Time__c - Lead_Status_Modified_Date__c</formula>
    <label>Time to Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>